--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/cartshop.svg" />
+    <link rel="icon" type="image/svg+xml" href="/clipboard.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.5" />
-    <title>ShoppinG </title>
+    <title>Pop&Go </title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
